2004-11-10  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-op.c: Fix encryption of text. Force armor
	mode when necessary 
	* plugins/gedit/seahorse-gedit.c: Fix Gedit plugin encryption of 
	entire document. Fix warnings under 2.8. Remove special character
	replacements from output.
	
2004-11-09  Nate Nielsen <nielsen@memberwebs.com>

	* configure.in: Better message on the GPG version check
	(bug# 157812)
	
2004-11-08  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-widget.c: Help | Contents menu item now
	works (bug# 157579) [Julio M. Merino Vidal]
	
2004-11-05	Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-key-manager.c:
	* AUTHORS:
	* THANKS: Added Adam and Albrect to credits
	
2004-11-05  Adam Schreiber <sadam@clemson.edu>

	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/seahorse-process-multiple.c: Moved package_uris 
	functionality into seahorse-util.c
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-process-multiple.c: Added "Backup Keyrings" 
	functionality (bug# 111901)
	
2004-11-04  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-op.c: Safer use of fingerprint
	* libseahorse/seahorse-pgp-source.c: Fix key memory leak 
	and reference counting issues
	* libseahorse/seahorse-key.c:
	* libseahorse/seahorse-key-pair.c:
	* libseahorse/seahorse-pgp-source.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h: Implement internal allocation of
	gpgme_key structures for use with key server
	* src/seahorse-key-manager-store.c: Fix memory leak
	
2004-11-02	Nate Nielsen <nielsen@memberwebs.com>

	* Version 0.7.5
	* configure.in: Updated version number
	
2004-11-01	Nate Nielsen <nielsen@memberwebs.com>
	
	* agent/seahorse-agent-io.c: Fix syntax error in cleanup code
	* src/seahorse-key-properties.c: Fix crasher when 'Expires' 