@@ -5,6 +5,13 @@
 	* plugins/gedit/seahorse-gedit.c: Fix Gedit plugin encryption of 
 	entire document. Fix warnings under 2.8. Remove special character
 	replacements from output.
+	* libseahorse/seahorse-check-button-control.c:
+	* libseahorse/seahorse-context.c:
+	* libseahorse/seahorse-context.h:
+	* src/seahorse-key-manager.c:
+	* src/seahorse-key-manager-store.c:
+	* src/seahorse-preferences.h: SeahorseContext now 'monitors' 
+	necessary gconf values instead of all over the place 
 	
 2004-11-09  Nate Nielsen <nielsen@memberwebs.com>
 
